2006-08-06  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (LoggingBuildStep.startCommand):
	refactor command-completion handling, to allow methods like
	commandComplete/createSummary/evaluateCommand to return Deferreds.
	(LoggingBuildStep._commandComplete): delete the refactored method
	(ShellCommand.setupLogfiles): if the buildslave is too old to
	understand logfiles=, put a warning message both into twistd.log
	and into the otherwise empty user-visible LogFiles.

	* buildbot/process/step.py (LoggedRemoteCommand.useLog): allow
	callers to provide the slave-side logfile name, rather than
	forcing it to come from the local name of the LogFile.
	(BuildStep.getSlaveName): new method

	* buildbot/process/base.py (Build.getSlaveName): new method, so
	steps can find out which buildslave they're running on

	* buildbot/test/test_steps.py (Version.checkCompare): oops, update
	to match the s/cvs_ver/command_version/ change

2006-08-05  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (command_version): replace the CVS
	auto-updated cvs_ver keyword with a manually-updated variable,
	since CVS is no longer the master repository. Add a description of
	the remote API change starting in this version (2.1), specifically
	the fact that SlaveShellCommand now accepts 'initial_stdin',
	'keep_stdin_open', and 'logfiles'.

2006-07-31  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (System Architecture): Finally add lots of
	diagrams to describe how the whole system fits together. The
	images themselves are kept in SVG files, with ascii-art versions
	in corresponding .txt files. Texinfo knows how to interpolate the
	text version into .info files, reference the .png versions from
	.html files, and include .eps versions in the .ps format.
	* docs/images/Makefile: tools to create .png and .eps
	* docs/images/*.svg: created pictures with Inkscape.
	* .darcs-boring: ignore the generated .eps and .png files
